<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator</string>
    <string name="title_activity_main">Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="expression">Enter new expression</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiply">x</string>
    <string name="erase">C</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="divide">/</string>
    <string name="backspace"><![CDATA[<]]></string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="plus">+</string>
    <string name="equals">=</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="subtract">-</string>
    <string name="left_parenthesis">(</string>
    <string name="left_parentheses">(</string>
    <string name="right_parentheses">)</string>
    <string name="pow">x\u207F</string>
    <string name="square_root">√x</string>
    <string name="change_sign">+/-</string>
    <string name="factorial">x!</string>
    <string name="answer">Ans</string>
    <string name="shift">Shift</string>
    <string name="sin1">sin</string>
    <string name="sin2">sin\u207B\u00B9</string>
    <string name="cos1">cos</string>
    <string name="cos2">cos\u207B\u00B9</string>
    <string name="tan1">tan</string>
    <string name="tan2">tan\u207B\u00B9</string>
    <string name="log1">log</string>
    <string name="log2">log\u2082</string>

</resources>
