<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="calculator.xzya.ro.calculator.MainActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/app_bar"
        android:padding="10dp"
        android:background="@color/primaryColorDark">

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="right|bottom"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/expression"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/expression"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/relativeLayout"
        android:background="@color/primaryColor"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/shift"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/shift"
                android:background="@drawable/button_color"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/sin"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/sin1"
                android:background="@drawable/button_color"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/cos"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/cos1"
                android:background="@drawable/button_color"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/tan"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/tan1"
                android:background="@drawable/button_color"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/log"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/log1"
                android:background="@drawable/button_color"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/erase"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/erase"
                android:background="@drawable/button_color"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/square_root"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/square_root"
                android:background="@drawable/button_color"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/pow"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/pow"
                android:background="@drawable/button_color"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/factorial"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/factorial"
                android:background="@drawable/button_color"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/backspace"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/backspace"
                android:background="@drawable/button_color"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/seven"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/seven"
                android:background="@drawable/button_color"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/eight"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/eight"
                android:background="@drawable/button_color"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/nine"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/nine"
                android:background="@drawable/button_color"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/left_parentheses"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/left_parentheses"
                android:background="@drawable/button_color"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/right_parentheses"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/right_parentheses"
                android:background="@drawable/button_color"
                android:textAppearance="?android:attr/textAppearanceLarge" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/four"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/four"
                android:background="@drawable/button_color"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/five"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/five"
                android:background="@drawable/button_color"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/six"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/six"
                android:background="@drawable/button_color"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/multiply"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/multiply"
                android:background="@drawable/button_color"
                android:textAppearance="?android:attr/textAppearanceLarge" />


            <TextView
                android:id="@+id/divide"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/divide"
                android:background="@drawable/button_color"
                android:textAppearance="?android:attr/textAppearanceLarge" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/one"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/one"
                android:background="@drawable/button_color"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/two"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/two"
                android:background="@drawable/button_color"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/three"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/three"
                android:background="@drawable/button_color"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/plus"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/plus"
                android:background="@drawable/button_color"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/subtract"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/subtract"
                android:background="@drawable/button_color"
                android:textAppearance="?android:attr/textAppearanceLarge" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/zero"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/zero"
                android:background="@drawable/button_color"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/dot"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/dot"
                android:background="@drawable/button_color"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/answer"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/answer"
                android:background="@drawable/button_color"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/change_sign"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/change_sign"
                android:background="@drawable/button_color"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/equals"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/equals"
                android:background="@drawable/button_color"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
